CHANGES.txt

Version 2.2
 * Updated SimileAjax.Graphics._FontRenderingContext.prototype.computeSize
   to take optional second paramenter of classname for computing size on
   screen. See issue 30. -- LarryK rev 1635 and 1637
 * Updated SimileAjax.Graphics._FontRenderingContext.prototype.computeSize
   to use getBoundingClientRect if available. See issue 13
   -- LarryK rev 1635 and 1637

Version 2.1
 * JQuery updated to v1.2.6
 * Snapshot of software
 * Added Changes, Release_notes, Readme and License files

Version 2.0
 * Software changes
 * Moved svn repository to Google code
